[project]
name = "llm-provider-cloud-api-status-dashboard"
version = "0.1.0"
description = "A Streamlit dashboard for monitoring LLM API and cloud service statuses"
requires-python = "==3.12.*"
dependencies = [
    "streamlit>=1.54.0",
    "requests>=2.33.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "pytz>=2023.3",
    "undetected-chromedriver==3.5.5",
    "selenium>=4.15.0",
    "webdriver-manager==4.0.2",
    "urllib3==2.7.0",
    "protobuf==6.33.5",
    "pillow==12.2.0",
    "pyarrow==23.0.1",
    "idna==3.15",
    "gitpython==3.1.50",
    "python-dotenv==1.2.2",
    "setuptools>=80.0.0",
    "truststore>=0.9.2",
]
